--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_icon_class: ^0.0.6
+  http: ^1.3.0
 dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
