--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   font_awesome_icon_class: ^0.0.6
   http: ^1.3.0
   image_picker: ^1.1.2
+  mobile_scanner: ^6.0.10
   permission_handler: ^12.0.0+1
 dev_dependencies:
   flutter_lints: ^5.0.0
