--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  dropdown_button2: ^2.3.9
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
