--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_custom_tree_view: ^1.8.0
   font_awesome_icon_class: ^0.0.6
   http: ^1.3.0
   image_picker: ^1.1.2
